Create Runnable Image
  * Add image creation to build steps

Signed-off-by: Brian Mooney <brian_satchwannabe@hotmail.com>